# Q4-hackathon-2-phase-3-main

./: .gitignore  AI-CHATBOT-SETUP.md  AI_SETUP_INSTRUCTIONS.md  ENV-SETUP.md  MCP-AGENT-SETUP.md  README.md  README_AI_CHATBOT.md  USAGE_GUIDE.md  demo_ai_chatbot.py  full_project_code.txt  package-lock.json  package.json  pyproject.toml  start-servers.bat  start_services.bat  start_services.sh  test-cohere.py  test-openai.py  tmpclaude-6ab6-cwd
.specify/memory/: constitution.md
ai-agent/: .env.example  README.md  agent.py  main.py  pyproject.toml
ai-integration/: README.md  main.py  pyproject.toml
backend/: database.py  main.py  pyproject.toml  requirements.txt  test.db
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: ai-chatbot.tsx  auth-guard.tsx  navbar.tsx  sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  select.tsx
frontend/src/types/: auth.ts  todo.ts
history/prompts/todo/: todo-prompt.md
mcp-server/: README.md  main.py  pyproject.toml
