[project]
name = "ai-agent"
version = "0.1.0"
description = "AI Agent for Todo Management using Cohere and MCP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.127.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "mcp>=1.25.0",
    "cohere>=5.0.0",
]
