[project]
name = "backend"
version = "0.1.0"
description = "TaskFlow Backend API with MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlmodel>=0.0.22",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "psycopg2-binary>=2.9.11",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.9",
    "httpx>=0.28.1",
    "mcp>=1.25.0",
    "openai-agents>=0.6.4",
    "openai-agents-mcp>=0.0.8",
]

[project.scripts]
mcp-server = "mcp_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["*"]
